<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_dialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="122dp"
            android:layout_marginBottom="23dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/bottomMedicineNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/medicine_name_text"
                android:textColor="@color/detailsFontColor"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/bottomTextViewMedicineName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/medicines_name_text"
                tools:layout_editor_absoluteX="201dp"
                tools:layout_editor_absoluteY="305dp" />

            <TextView
                android:id="@+id/bottomMedicineTypeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/type_of_medicine_text"
                android:textColor="@color/detailsFontColor"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/bottomTextViewMedicineType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/type_of_medicines_text"
                tools:layout_editor_absoluteX="201dp"
                tools:layout_editor_absoluteY="349dp" />

            <TextView
                android:id="@+id/bottomMedicinePriceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/price_of_medicine_text"
                android:textColor="@color/detailsFontColor"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/bottomTextViewMedicinePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_of_medicines_text"
                tools:layout_editor_absoluteX="202dp"
                tools:layout_editor_absoluteY="399dp" />


        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/infoCardView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="23dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/bottomImageViewMedicine"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="27dp"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/bottomAboutMedicineText"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/about_medicine_text"
            android:textColor="@color/detailsFontColor"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="325dp" />


    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="1dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bottomTextViewMedicineDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/information_medicine_text"
                android:textColor="@color/detailsFontColor"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="267dp" />


        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_horizontal_rule_24" />


</androidx.constraintlayout.widget.ConstraintLayout>