<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewWarning"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:background="@color/white"
        android:padding="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textViewWarning"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/description"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewConfirmName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sample_name_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="130dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:text="@string/confirm_text"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNameSurname" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="130dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:text="@string/give_up_text"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNameSurname" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNameSurname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="300dp"
                android:layout_height="60dp"
                app:helperTextTextColor="@color/red"
                android:layout_marginTop="30dp"
                android:hint="@string/name_surname_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputNameSurname"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>