<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/details"
    tools:context="view.DetailsFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDashboard"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="110dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageViewAvatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="144dp"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:text="@string/name_surname_text"
                android:textColor="@color/detailsFontColor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textViewTc"
                android:layout_width="145dp"
                android:layout_height="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/turkish_republic_text"
                android:textColor="@color/detailsTcFontColor"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
                app:layout_constraintTop_toBottomOf="@+id/textViewName" />

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="100dp"
                android:layout_height="23dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/custom_detail_rectangle"
                android:gravity="center"
                android:text="@string/status_text"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textViewTotal"
                    android:layout_width="85dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/sample_debt_text"
                    android:textColor="@color/detailsFontColor"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/textViewTotalMedicine"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTotalDebtText" />

                <TextView
                    android:id="@+id/textViewTotalDebtText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="130dp"
                    android:text="@string/total_debt_text"
                    android:textColor="@color/detailsFontColor"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/textViewTotalMedicineText"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewTotalMedicine"
                    android:layout_width="32dp"
                    android:layout_height="26dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/sample_medicine_quantity_text"
                    android:textColor="@color/detailsFontColor"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textViewTotal"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTotalMedicineText" />

                <TextView
                    android:id="@+id/textViewTotalMedicineText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="130dp"
                    android:text="@string/total_medicine_text"
                    android:textColor="@color/detailsFontColor"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textViewTotalDebtText"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewTheMedicineITakeText"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:text="@string/the_medicine_i_take_text"
        android:textColor="@color/detailsFontColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewDashboard">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFragmentDetails"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTheMedicineITakeText" />

    <ImageView
        android:id="@+id/imageViewGraph"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_baseline_info_24"
        app:layout_constraintStart_toEndOf="@+id/textViewTheMedicineITakeText"
        app:layout_constraintTop_toBottomOf="@+id/cardViewDashboard" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewFragmentDetails" />


</androidx.constraintlayout.widget.ConstraintLayout>